--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,22 @@
   color: #61dafb;
 }
 
+.btn {
+  margin: 15px;
+  background-color: rgb(56, 65, 55);
+  padding: 10px;
+}
+
+.block {
+  /* width: 25px; */
+  height: 100px;
+}
+
+p {
+  margin: 15px;
+  display: inline-block;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
